--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation project(':exoplayer-library-core')
-    implementation project(':exoplayer-library-dash')
-    implementation project(':exoplayer-library-ui')
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.4'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
